css/schedule.css
/* ... */
				#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters {
					display: block;
				}
				#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters::before {
					height: 100%;
				}

@container kompassi-integration (min-width: 700px) {
	#kompassi_schedule_filters.visible {
		display: grid;
		grid-template-columns: repeat(var(--kompassi-schedule-filters-columns, 4), minmax(0, 1fr));
		grid-gap: var(--kompassi-padding);
	}
		#kompassi_schedule_filters.visible > *,
		#kompassi_schedule_filters.visible > .select > * {
			margin-right: 0;
			margin-bottom: 0;
			width: 100%;
			max-width: 100%;
		}
	#kompassi_schedule_filters.visible.has-filters-enabled {
		padding-right: calc( 1.5em + var(--kompassi-padding) * 2 );
		padding-bottom: var(--kompassi-padding);
	}
		#kompassi_schedule_filters .clear-filters {
			left: unset;
			bottom: unset;
			top: var(--kompassi-padding);
			right: var(--kompassi-padding);
			width: 1.5em;
			height: calc( 100% - var(--kompassi-padding) * 2 );
		}
		#kompassi_schedule_filters .clear-filters::before {
			width: 100%;
			margin-right: 0;
		}
		#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters::after {
			display: none;
		}
}

/*
 *  Schedule
 *
 */

summary {
	list-style: none;
}
summary::marker {
	display: none;
}

.kompassi_schedule_wrapper {
	width: calc( 100% - 0.2em );
	padding: 0.2em;
	overflow: hidden;
	user-select: none;
	position: relative;
}

#kompassi_schedule article.filtered {
	display: none !important;
}

#kompassi_schedule article:hover {
	cursor: pointer;
}

/*  Default/common styles  */
#kompassi_schedule article::before {
	background-image: var(--kompassi-program-icon, var(--kompassi-program-icon-default));
	background-size: auto calc( 100% - 3em );
	background-position: 1.5em 50%;
	background-repeat: no-repeat;
}

#kompassi_schedule article .title {
	font-weight: bold;
	letter-spacing: 0.04em;
}

#kompassi_schedule article .actions > a {
	margin-right: var(--kompassi-padding);
}

#kompassi_schedule article .actions > ::before {
	content: '';
	display: inline-block;
	width: var(--kompassi-icon-size);
	height: var(--kompassi-icon-size);
	background-position: 50% 50%;
	background-repeat: no-repeat;
	background-size: contain;

	padding: 0;
	margin: 0;
	transition: 100ms all;
}
	#kompassi_schedule article .actions > .favorite:hover::before {
		margin: -2px;
		padding: 2px;
	}

#kompassi_schedule .times span {
	white-space: nowrap;
}
[id^="kompassi"] .times .length {
	font-size: max(85%, 8pt);
	text-transform: none;
	color: var(--kompassi-fg-50);
	margin-left: 0.4em;
}

#kompassi_schedule article summary {
	outline: none;
}

#kompassi_schedule article .main {
	background-color: var(--kompassi-palette-5);
}

/*  Programs continuing  */
#kompassi_schedule:not([data-display="timeline"]) article.continues {
	order: 3;
}
#kompassi_schedule[data-display="timeline"].now article.continues {
/*	opacity: 0.5; */
/*	background-image: linear-gradient( to bottom, hsl(0,0%,60%), hsl(0,0%,75%) ); */
}

#kompassi_schedule:not([data-display="timeline"]) #kompassi_programs_continuing {
	order: 2;
}
	#kompassi_schedule[data-display="timeline"] #kompassi_programs_continuing {
		display: none;
	}

/*  Display Style: List  */
#kompassi_schedule[data-display="list"] {
	--kompassi-program-list-padding: 0.3em;
	--kompassi-program-list-visual-width: 12px;

	display: grid;
	grid-template-columns: repeat(1,1fr);
	grid-gap: 0.5em;
}
	#kompassi_schedule[data-display="list"] article {
		position: relative;
		padding-left: calc( var(--kompassi-program-list-visual-width) );
		color: var(--kompassi-fg);
		background-color: var(--kompassi-bg);
		box-shadow: var(--kompassi-box-shadow);
		border-radius: var(--kompassi-radius);
	}
		#kompassi_schedule[data-display="list"] article::before {
			content: '';
			position: absolute;
			display: block;
			width: var(--kompassi-program-list-visual-width);
			top: 0;
			bottom: 0;
			left: 0;
			background-color: var(--kompassi-program-color, var(--kompassi-program-color-default));
			background-size: calc( 100% - 2.5em ) auto;
			background-position: 50% 0.5em; /* TODO: Why is this the correct value? */
			border-top-left-radius: var(--kompassi-radius);
			border-bottom-left-radius: var(--kompassi-radius);
		}
		#kompassi_schedule[data-display="list"] article summary {
			display: grid;
			grid-template-columns: 1fr min-content;
			grid-template-areas: "title actions" "secondary secondary";
			padding: var(--kompassi-padding);
		}
			#kompassi_schedule[data-display="list"] article summary .favorite::before {
				margin-right: 0;
			}
			#kompassi_schedule[data-display="list"] article summary .secondary {
				display: flex;
				justify-content: space-between;
			}
				#kompassi_schedule[data-display="list"] article summary .secondary > :last-child {
					text-align: right;
				}
		#kompassi_schedule[data-display="list"] article section {
			border-top: 1px solid var(--kompassi-fg-10);
		}
			#kompassi_schedule[data-display="list"] article section > * {
				padding: 0 var(--kompassi-padding);
				margin-bottom: var(--kompassi-padding);
			}
				#kompassi_schedule[data-display="list"] article section .main {
					padding: var(--kompassi-padding);
				}
		#kompassi_schedule[data-display="list"] article section .meta:has(+ .actions) {
			margin-bottom: 0;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::before {
			content: unset;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::after {
			content: attr(title);
		}
		#kompassi_schedule[data-display="list"] article section .meta .in-summary {
			display: none;
		}
/* ... */

